(MODULES-6637) Fixing port conflicts if hostname is diff in bindings

--- a/lib/puppet/provider/templates/webadministration/_newwebsite.ps1.erb
+++ b/lib/puppet/provider/templates/webadministration/_newwebsite.ps1.erb
@@ -12,6 +12,9 @@ $createParams = @{
   Force           = $true
   ErrorAction     = 'Stop'
 <%= "port            = #{resource.provider.binding_port}" unless resource.provider.binding_port.nil? %>
+<% unless resource.provider.host_header.nil? %>
+  hostheader  =  '<%= "#{resource.provider.host_header}" %>'
+<% end %>
 }
 
 # If there are no other websites, specify the Id, otherwise an Index Out of Range error can be thrown
